<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/blueDark">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/signin_email"
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="48dp"
                android:inputType="textEmailAddress"
                android:background="@color/blue_some"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_email"
            android:textColor="@color/red"
            android:layout_marginStart="148dp"
            android:layout_marginTop="130dp"
            android:visibility="invisible"  />



        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="150dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/signin_password"
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@color/blue_some"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_password"
            android:textColor="@color/red"
            android:layout_marginStart="148dp"
            android:layout_marginTop="180dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/blueDark"
            android:textColor="@color/white"
            android:layout_marginStart="150dp"
            android:layout_marginTop="200dp"/>

        <TextView
            android:id="@+id/jump_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="300dp"
            android:text="@string/registeration"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>


    </RelativeLayout>

</LinearLayout>