<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_marginStart="58dp"
            android:inputType="textEmailAddress"
            android:background="@color/blue_some"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:inputType="textPassword"
            android:background="@color/blue_some"
            android:hint="@string/password" />

    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginStart="150dp"
        android:layout_marginTop="250dp"
        android:background="@color/blueDark"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:visibility="gone"/>

</RelativeLayout>