<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_info"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/common_full_open_on_phone" />


        <EditText
            android:id="@+id/full_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:background="@color/blueLight"/>



        <Button
            android:id="@+id/submit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginStart="170dp"
            android:layout_marginTop="20dp"
            android:background="@color/blueDark"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>